# sopr-scheme-gener

./: .gitignore  ARCHITECTURE_NOTES.md  LICENSE  README.md  __main__.spec  common.py  container.py  elements.py  paintool.py  paintwdg.py  projector.py  pyproject.toml  sections.py  sopr-sheme-gener.py  sopr-sheme-gener.spec  tablewidget.py  task0.py  task0kr.py  task1.py  task2.py  task3.py  task4.py  taskconf_menu.py  util.py  utilmath.py
HIDE/: task0kr.py
docs/: DEV_API.md  DOCUMENT_FORMAT.md
items/: __init__.py  arrow.py  circmoment.py  distrib.py  moment3d.py  section.py  sharn3d.py  squaremoment.py  text.py
sopr_scheme_gener/: __init__.py  __main__.py  app.py  baselines.py  context.py  ctl.py  devapi.py  document.py  legacy.py  legacy_storage.py  storage.py  task_registry.py
tasks/: Readme.md  __init__.py  ar3d.py  ar3d2.py  axial_torsion.py  balki.py  balki3d.py  beams.py  cube.py  eccentric_bending.py  fermes.py  frames.py  kosoi.py  minimal.py  oblique_bending.py  plastina.py  plate.py  rod_system_1.py  rod_system_2.py  shafts_pipes.py  sharn_sterhen.py  spatial_beams.py  star.py  stress_cube.py  task0.py  vali.py
tests/: test_app_smoke.py  test_axial_torsion_layout.py  test_axial_torsion_scene_integration.py  test_beams_layout.py  test_beams_scene_integration.py  test_context.py  test_ctl.py  test_devapi_tcp.py  test_document_api.py  test_eccentric_bending_layout.py  test_eccentric_bending_scene_integration.py  test_frames_layout.py  test_frames_scene_integration.py  test_oblique_bending_layout.py  test_oblique_bending_scene_integration.py  (+20 more)
(+22 files in other folders)
