[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "sopr-scheme-gener"
version = "0.2.0"
description = "Editor for diagrams used in strength-of-materials exercises"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "mirmik" }]
dependencies = [
    "numpy>=1.24,<3",
    "PyQt5>=5.15,<6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<10",
]

[project.scripts]
sopr-scheme-gener = "sopr_scheme_gener.app:main"
soprctl = "sopr_scheme_gener.ctl:main"
sopr-baseline = "sopr_scheme_gener.baselines:main"

[tool.setuptools]
py-modules = [
    "common",
    "container",
    "elements",
    "paintool",
    "paintwdg",
    "projector",
    "sections",
    "tablewidget",
    "taskconf_menu",
    "util",
    "utilmath",
]

[tool.setuptools.packages.find]
include = ["sopr_scheme_gener*", "tasks*", "items*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
